[package]
name = "cexpr"
version = "0.3.5"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "Apache-2.0/MIT"
description = "A C expression parser and evaluator"
documentation = "https://docs.rs/cexpr/"
repository = "https://github.com/jethrogb/rust-cexpr"
keywords = ["C","expression","parser"]

[badges]
travis-ci = { repository = "jethrogb/rust-cexpr" }

[dependencies]
nom = {version = "^4", features = ["verbose-errors"] }

[dev-dependencies]
clang-sys = ">= 0.13.0, < 0.29.0"
